rust/macros/tests/invalid/target/debug/deps/macros-6ebc302c261b1b27.d
/home/jai/Rust/Exercism/rust/macros/tests/invalid/target/debug/deps/macros-6ebc302c261b1b27.rmeta: /home/jai/Rust/Exercism/rust/macros/src/lib.rs

/home/jai/Rust/Exercism/rust/macros/tests/invalid/target/debug/deps/macros-6ebc302c261b1b27.d: /home/jai/Rust/Exercism/rust/macros/src/lib.rs

/home/jai/Rust/Exercism/rust/macros/src/lib.rs:
